[package]
name = "tss-cli"
version = "0.1.0"
authors = [
    "Kaspars Sprogis <darklow@gmail.com>"
]
edition = "2018"

[[bin]]
name = "tss_cli"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
uuid = { version = "0.8", features = ["v4"] }
aes-gcm = "0.9.4"
libsecp256k1 = "0.3.2"
curv = { package = "curv-kzen", version = "0.7", default-features = false }
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.10"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.3.12"}
clap = { version = "2.33", features = ["yaml"] }
ring = "0.17.0-alpha.11"
data-encoding="2.3.3"
rustc-serialize="0.3"

[dependencies.multi-party-ecdsa]
git = "https://github.com/Hrezaei/multi-party-ecdsa"
#tag = "v0.3.0"
branch = "feature/deprecate-rust-crypto"

[patch.crates-io]
rust-gmp = { version = "0.5.1", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[profile.release]
opt-level = 2